latex2mmlc/src/snapshots/latex2mmlc__tests__special_symbols.snap
---
source: latex2mmlc/src/lib.rs
expression: "\\%\\$\\#"
---
<math>
    <mi>%</mi>
    <mi>$</mi>
    <mi>#</mi>
</math>
