latex2mmlc/src/snapshots/latex2mmlc__tests__square_root.snap
---
source: latex2mmlc/src/lib.rs
expression: "\\sqrt 2"
---
<math>
    <msqrt>
        <mn>2</mn>
    </msqrt>
</math>
