latex2mmlc/src/snapshots/latex2mmlc__tests__square_root_with_space.snap
---
source: latex2mmlc/src/lib.rs
expression: "\\sqrt 12"
---
<math>
    <msqrt>
        <mn>1</mn>
    </msqrt>
    <mn>2</mn>
</math>
