latex2mmlc/src/snapshots/latex2mmlc__tests__square_root_without_space.snap
---
source: latex2mmlc/src/lib.rs
expression: "\\sqrt12"
---
<math>
<msqrt>
    <mn>1</mn>
</msqrt>
<mn>2</mn>
</math>
