latex2mmlc/src/snapshots/latex2mmlc__tests__standalone_underscore.snap
---
source: latex2mmlc/src/lib.rs
expression: _2F_3
---
<math>
    <msub>
        <mmultiscripts>
            <mi>F</mi>
            <mprescripts/>
            <mn>2</mn>
            <mrow></mrow>
        </mmultiscripts>
        <mn>3</mn>
    </msub>
</math>
