latex2mmlc/src/snapshots/latex2mmlc__tests__stretchy_bracket.snap
---
source: latex2mmlc/src/lib.rs
expression: "\\left[ x  ( x + 2 ) \\right]"
---
<math>
    <mrow>
        <mo stretchy="true" form="prefix">[</mo>
        <mrow>
            <mi>x</mi>
            <mo stretchy="false">(</mo>
            <mi>x</mi>
            <mo>+</mo>
            <mn>2</mn>
            <mo stretchy="false">)</mo>
        </mrow>
        <mo stretchy="true" form="postfix">]</mo>
    </mrow>
</math>
