latex2mmlc/src/snapshots/latex2mmlc__tests__stretchy_one-sided_parenthesis.snap
---
source: latex2mmlc/src/lib.rs
expression: "\\left( x \\right."
---
<math>
    <mrow>
        <mo>(</mo>
        <mi>x</mi>
        <mo></mo>
    </mrow>
</math>
