latex2mmlc/src/snapshots/latex2mmlc__tests__stretchy_parentheses.snap
---
source: latex2mmlc/src/lib.rs
expression: "\\left( x \\right)"
---
<math>
    <mrow>
        <mo stretchy="true" form="prefix">(</mo>
        <mi>x</mi>
        <mo stretchy="true" form="postfix">)</mo>
    </mrow>
</math>
