latex2mmlc/src/snapshots/latex2mmlc__tests__sub_sub.snap
---
source: latex2mmlc/src/lib.rs
expression: x_2_3 y
---
Position: 3
CannotBeUsedHere {
    got: Underscore,
    correct_place: AfterOpOrIdent,
}
