latex2mmlc/src/snapshots/latex2mmlc__tests__sub_super_then_prime.snap
---
source: latex2mmlc/src/lib.rs
expression: "f_5^2'"
---
Position: 5
CannotBeUsedHere {
    got: Prime,
    correct_place: AfterOpOrIdent,
}
